# Spectral

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  azure-pipelines.yml  generatedocs.py
docgen/pylib/json_to_Markdown_converter/: json_to_Markdown_converter.py  write_markdown.py
docgen/pylib/xml_to_json_parser/: compounds.py  extract_namespace.py  jsonSerialization.py  parameters.py  parse_code.py  parse_description.py  parse_file.py  parse_todos.py  settings.py  xml_to_json_parser.py
docs/: AssetBuffer.md  AssetLoader.md  AudioModule.md  Clay_BorderElementConfig.md  Clay_CustomElementConfig.md  Clay_ImageElementConfig.md  Clay_RectangleElementConfig.md  Clay_TextElementConfig.md  Clay__Alignpointer.md  Cube.md  DynamicLibrary.md  DynamicScript.md  Game.md  GameContext.md  GraphicsModule.md  Module.md  ModuleWin.md  Modules.md  Script.md  ScriptLoaderModule.md  ShaderModule.md  TextAssetBuffer.md  TextModule.md  TextUniforms.md  TextVertex.md  TextureModule.md  Vertex.md  WindowModule.md  WorldModule.md  api.md  index.md  sAudioClip.md  sAudioSource.md  sCamera.md  sD3D11_1Context.md  sFont.md  sFreeTypeContext.md  sIUIGlobalState.md  sInternalFont.md  sInternalMesh.md  (+33 more)
docs/audio/: index.md
docs/graphics/: index.md
docs/md/src/2/r/e/a/d/m/: e.md
docs/sInternalFont/: CharacterDef.md
docs/scrload/: index.md
docs/shader/: index.md
docs/texload/: index.md
docs/text/: index.md
docs/window/: index.md
docs/world/: index.md
install/archlinux/: Dockerfile  docker-compose.yml
install/fedora/: Dockerfile  docker-compose.yml
install/linux/: Dockerfile  apt.md  docker-compose.yml
install/ubuntu/: Dockerfile  apt.md  docker-compose.yml
src/: README.md  cube.h  main.cpp  script.h
src/game/: CMakeLists.txt  game.cpp
src/game/assets/shader/: basic.frag  basic.vert  text.frag  text.vert
src/game/assets/spsl/: basic.spslf  text.spslv  vulktest.spslf  vulktest.spslv
src/game/assets/spsl/iui/: rect.spslf
src/game/src/: cube.h  game.cpp
src/include/: Vector.h  asset.h  moduleLib.h  spectral.h
src/include/ecs/: object.h
src/include/util/: arena.h  sel.h
src/modules/: CMakeLists.txt  arena.h  asset.h  game.h  moduleLib.h
src/modules/aud/: module.h  openal.cpp
src/modules/engineui/: module.h  sftgui.cpp
src/modules/eui/: module.h
src/modules/gfx/: d3d11_1.cpp  eogll.cpp  getprocaddress.h  glad.cpp  glutils.h  module.h  opengl.h  sf.cpp  vulkan.cpp
src/modules/inp/: module.h
src/modules/iui/: clay.h  module.h
src/modules/math/: module.h
src/modules/net/: module.h
src/modules/scriptloading/: cppscript.cpp  module.h
src/modules/scrld/: cppscript.cpp  module.h
src/modules/sel/: module.h
src/modules/shdr/: glsl.cpp  module.h  spsl.cpp
src/modules/tex/: module.h  stb.cpp
src/modules/text/: freetype.cpp  module.h
src/modules/win/: eogllwin.cpp  glfwwin.cpp  module.h  sfwin.cpp
src/modules/window/: glfwwin.cpp  module.h  sfwin.cpp
src/modules/wrld/: module.h  wrldmain.cpp
